<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="1"
        android:title="@string/to_filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="2"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_manage_filters"
        android:orderInCategory="3"
        android:title="Gestisci filtri"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="3"
        android:title="@string/order"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="5"
        android:title="@string/export_pdf"
        app:showAsAction="never" />
</menu>
