<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_date_asc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/less_recent"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <RadioButton
                    android:id="@+id/radio_date_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/most_recent"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/radio_amount_asc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smallest"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <RadioButton
                    android:id="@+id/radio_amount_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/biggest"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

</FrameLayout>