<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/by_category"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Switch
                        android:id="@+id/switch_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/filter_category_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--<CheckBox
                        android:id="@+id/chkIos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Categoria 1" />-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/by_period"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Switch
                        android:id="@+id/switch_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/filter_period_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/from_" />

                    <EditText
                        android:id="@+id/editText_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="none" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/to_" />

                    <EditText
                        android:id="@+id/editText_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="none" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/by_amount"
                        android:textAppearance="?android:attr/textAppearanceLarge" />+

                    <Switch
                        android:id="@+id/switch_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />

                </LinearLayout>

                <!--Seguendo una particolare sequenza di attivazione degli
                switch questo layout scompare...-->
                <LinearLayout
                    android:id="@+id/filter_amount_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/from" />

                    <EditText
                        android:id="@+id/editText_start_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/to" />

                    <EditText
                        android:id="@+id/editText_end_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/button_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/turn_off"
                android:textOff="@string/turn_on"
                android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>