<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="2"
                app:rowCount="8">

                <TextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_row="0"
                    app:layout_column="0"
                    app:layout_columnWeight=".5"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/editTextDate"
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_columnWeight=".5"
                    app:layout_row="0"
                    app:layout_column="1" />


                <TextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    app:layout_columnWeight=".5"
                    app:layout_row="1"
                    app:layout_column="0" />

                <EditText
                    android:id="@+id/editTextDesc"
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_row="1"
                    app:layout_column="1"
                    app:layout_columnWeight=".5"/>


                <TextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Registo"
                    app:layout_row="2"
                    app:layout_column="0"
                    app:layout_columnWeight=".5"/>

                <Spinner
                    android:id="@+id/spinner_database"
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_row="2"
                    app:layout_column="1"
                    app:layout_columnWeight=".5"/>

                <TextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fonte"
                    app:layout_row="3"
                    app:layout_column="0"
                    app:layout_columnWeight=".5"/>

                <Spinner
                    android:id="@+id/spinner_src_cat"
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_row="3"
                    app:layout_column="1"
                    app:layout_columnWeight=".5"/>


                <TextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Destinazione"
                    app:layout_row="4"
                    app:layout_column="0"
                    app:layout_columnWeight=".5"/>

                <Spinner
                    android:id="@+id/spinner_dst_cat"
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_row="4"
                    app:layout_column="1"
                    app:layout_columnWeight=".5"/>


                <TextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    app:layout_row="5"
                    app:layout_column="0"
                    app:layout_columnWeight=".5"/>

                <EditText
                    android:id="@+id/editTextAmount"
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_row="5"
                    app:layout_column="1"
                    app:layout_columnWeight=".5"/>

                <TextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data inizio"
                    app:layout_row="6"
                    app:layout_column="0"
                    app:layout_columnWeight=".5"/>

                <EditText
                    android:id="@+id/editTextStartDate"
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    app:layout_row="6"
                    app:layout_column="1"
                    app:layout_columnWeight=".5"/>


                <TextView
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data fine"
                    app:layout_row="7"
                    app:layout_column="0"
                    app:layout_columnWeight=".5"/>

                <EditText
                    android:id="@+id/editTextEndDate"
                    style="@style/textNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    app:layout_row="7"
                    app:layout_column="1"
                    app:layout_columnWeight=".5"/>


            </android.support.v7.widget.GridLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top">


                <LinearLayout
                    android:id="@+id/layout_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkbox_periodic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/periodic"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <LinearLayout
                        android:id="@+id/layout_periodic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/repeat_every"
                                android:textAppearance="?android:attr/textAppearanceLarge" />

                            <Spinner
                                android:id="@+id/spinner_period"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:entries="@array/periods"
                                android:textAppearance="?android:attr/textAppearanceLarge" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/for_"
                                android:textAppearance="?android:attr/textAppearanceLarge" />

                            <Spinner
                                android:id="@+id/spinner_times"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:entries="@array/times"
                                android:textAppearance="?android:attr/textAppearanceLarge" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/times"
                                android:textAppearance="?android:attr/textAppearanceLarge" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/button_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OK" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>